--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -350,9 +350,9 @@ top:14px;}
 .express-checkout .button {float: right; padding: 6px 9px; margin-top: 17px;}
 
 .page-express-checkout  #content{position: relative; width: 1000px; margin-top: 20px;background: url(../images/dotted_vertical.png) 704px 0 repeat-y;}
-.page-express-checkout  .sidebarRight .column1{width: 682px;background: ; padding-right: 25px; padding-bottom: 30px;}
+.page-express-checkout  .sidebarRight .column1{width: 682px; float: left; background: ; padding-right: 25px; padding-bottom: 30px;}
 .page-express-checkout  .sidebarRight .column2{position: absolute; width:267px; display:inline;float:left; }
-.page-express-checkout  .sidebarRight .sidebar{width: 100%; padding-left:53px;}
+.page-express-checkout  .sidebarRight .sidebar{width: 100%; padding-left:26px;}
 #fm-commerce-express-checkout-form .form-item-credit-card-number {padding-bottom: 4px;}
 #fm-commerce-express-checkout-form .text-form-icon-wrapper{position: relative; width:240px; overflow: hidden; }
 #fm-commerce-express-checkout-form .text-form-icon-wrapper #lock_markup{position: absolute; top: 21px; right: 8px; }
