--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -594,12 +594,12 @@ top:14px;}
   
   
 /* Footer */
-#footer{background-color:#fff; position: fixed;bottom: 0px;width: 1024px; clear: both;margin-top: 30px;}
-#footer .container{}
-#footer .links{margin-bottom: 15px; float: left; margin-left: 20px; margin-top: 25px}
+#footer{background-color:#fff; position: fixed;bottom: 0px;width: 1024px; clear: both;z-index: 1000}
+#footer .container{margin-top: 10px;}
+#footer .links{ float: left; margin-left: 20px; margin-top: 5px}
 #footer .links a{margin-right: 14px;}
 #footer .copyright{font-size: 20px; color: #a0978f; float: left;margin-left: 20px;}
-#footer .copyright img{height: 45px; padding: 10px;}
+#footer .copyright img{height: 30px; }
 #footer .box{float: right; width: 400px;}
 #footer h1{text-transform: uppercase; font-size: 13px; font-weight: 500;}
 #footer .subCol{float: left; width: 150px; text-align:center;}
