--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -594,7 +594,7 @@ top:14px;}
   
   
   /* My Favorites */
-.my_favorites_containter {position: fixed; bottom: 0px;  background-color: #fff; width: 1024px;}
+.my_favorites_containter {position: fixed; bottom: 0px;  background-color: #fff; width: 1024px;z-index: 1001}
 .my_favorites_containter  .title {margin: 20px; float: left;}
 .my_favorites {float: left; padding: 5px;}
 .my_favorites li {float: left; }
