--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -596,15 +596,15 @@ top:14px;}
   
   /* My Favorites */
 .my_favorites_containter {position: fixed; bottom: 0px;height:70px;background-color: #fff; width: 1024px;z-index: 1001}
-.my_favorites_containter  .title {margin: 20px; float: left;}
+.my_favorites_containter  .title {margin: 20px; float: left; font-size: 13px;}
 .my_favorites {float: left; padding: 5px;}
 .my_favorites li {float: left; }
 .my_favorites  li a img {border:1px solid #777777;display:block; width: 40px; height: 51px;}
 .my_favorites_containter .close {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;position:absolute;text-indent:-9999px;top:5px;;width:25px;}
  .my_favorites_containter .close:hover {background-position: -25px -25px;} 
  
- .my_favorites_link {position: fixed; padding: 10px; text-align: center; bottom: 0px;height:20px;background-color: #fff; width: 170px;z-index: 1000}
-.my_favorites_link a { padding: 10px; cursor: pointer; font-size: 15px;}
+ .my_favorites_link {position: fixed; padding: 3px; text-align: center; bottom: 0px;height:20px;background-color: #fff; width: 170px;z-index: 1000}
+.my_favorites_link a { padding: 10px; cursor: pointer; font-size: 13px;}
   
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
