--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -76,8 +76,8 @@ label.invalid {-moz-border-radius:3px 3px 3px 3px;background:none repeat scroll 
 .col1 .itemLoved h2.designer{margin: 0;}
 .col1 .itemLoved h2.designer a{font-size: 12px;color: #0f6da3; font-style:normal;font-family:"museo-sans-1","museo-sans-2", Helvetica; margin: 3px 0 0 0;}
 .col1 .itemLoved h3 {font-size: 12px; font-style:italic; background: url(../images/icon_star.png) left center no-repeat; padding: 0 0 0 18px; margin: 3px 0 0 0;}
-.col1 .itemLoved .thumb{float: left; margin: 0 10px 10px 0;}
-.col1 .itemLoved .text{float: left;  width: 120px;}
+.col1 .itemLoved .thumb{float: left; margin: 0 10px 10px 0; width: 56px; height: 71px;}
+.col1 .itemLoved .text{float: left;  width: 110px;}
 
 
 
@@ -202,6 +202,9 @@ background: #fff;border:1px solid #cac9c6;cursor:pointer;float:left;height:20px;
 .press p{font-family: Georgia, "Times New Roman", Times, serif; font-style:italic; line-height: 16px;}
 .source {color: #767272; font-size: 11px; padding: 5px 0; margin-bottom: 5px;}
 
+#gallery .social_favorites {position: absolute; top:3px; right: 3px;}
+#gallery .social_favorites img {height: 15px; border: 0px solid #000; }
+#gallery  .ad-thumbs li {position: relative;}
 
 /* Sign Up Box */
 
