--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -203,7 +203,7 @@ background: #fff;border:1px solid #cac9c6;cursor:pointer;float:left;height:20px;
 .source {color: #767272; font-size: 11px; padding: 5px 0; margin-bottom: 5px;}
 
 #gallery .social_favorites {position: absolute; top:3px; right: 3px;}
-#gallery .social_favorites img {height: 15px; border: 0px solid #000; }
+#gallery .social_favorites img {height: 15px; border: 0px solid #000; display:none;}
 #gallery  .ad-thumbs li {position: relative;}
 
 /* Sign Up Box */
