--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -202,8 +202,8 @@ background: #fff;border:1px solid #cac9c6;cursor:pointer;float:left;height:20px;
 .press p{font-family: Georgia, "Times New Roman", Times, serif; font-style:italic; line-height: 16px;}
 .source {color: #767272; font-size: 11px; padding: 5px 0; margin-bottom: 5px;}
 
-#gallery .social_favorites {position: absolute; top:3px; right: 3px;}
-#gallery .social_favorites img {height: 15px; border: 0px solid #000; display:none;}
+#gallery .social_favorites {position: absolute; bottom:3px; left: 3px;}
+#gallery .social_favorites img {height: 20px; border: 0px solid #000; display:none;}
 #gallery  .ad-thumbs li {position: relative;}
 
 /* Sign Up Box */
