--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -598,7 +598,7 @@ top:14px;}
   
   
   /* My Favorites */
-.my_favorites_containter {display: none; position: fixed; bottom: 0px; left: 5px; height: 61px;background-color: #666; width: 99%; z-index: 1001}
+.my_favorites_containter {display: none; position: fixed; bottom: 0px; left: 5px; height: 61px;background-color: #222; width: 99%; z-index: 1001}
 .my_favorites_containter  .title {margin: 20px; float: left; font-size: 13px;}
 .my_favorites {float: left; padding: 5px;}
 .my_favorites li.empty_thumb {width: 40px; height: 51px; background-repeat:no-repeat;background-image: url(../images/confirm-ajax-loader.gif) ;background-position:50% 50%;}
@@ -607,8 +607,8 @@ top:14px;}
 .my_favorites_containter .close {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;position:absolute;text-indent:-9999px;top:5px;;width:25px;}
  .my_favorites_containter .close:hover {background-position: -25px -25px;} 
  
- .my_favorites_link {background: url("../images/bg_panelHeader.jpg") repeat-x scroll left top transparent; position: fixed; right: 20px; padding: 3px; text-align: center; bottom: 0px;height:20px;background-color: #fff; width: 170px;z-index: 1000}
-.my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer; font-size: 13px; color: #fff;}
+ .my_favorites_link {background: url("../images/bg_panelHeader.jpg") repeat-x scroll left top transparent; position: fixed; right: 20px; padding: 3px; text-align: center; bottom: 0px;height:25px;background-color: #fff; width: 185px;z-index: 1000}
+.my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer; font-family: "jubilat-1","jubilat-2",Georgia; font-size: 20px; color: #fff;}
   
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
