--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -602,13 +602,14 @@ top:14px;}
 .my_favorites_containter  .title {margin: 20px; float: left; font-size: 13px;}
 .my_favorites {text-align: center; padding: 5px;}
 .my_favorites li.empty_thumb {width: 40px; height: 51px; background-repeat:no-repeat;background-image: url(../images/confirm-ajax-loader.gif) ;background-position:50% 50%;}
-.my_favorites li {display:inline; margin-left: 5px; }
+.my_favorites li {display:inline; margin-left: 3px; }
 .my_favorites  li a img {border:1px solid #777777; width: 40px; height: 51px;}
 .my_favorites_containter .close {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;position:absolute;text-indent:-9999px;top:5px;;width:25px;}
  .my_favorites_containter .close:hover {background-position: -25px -25px;} 
  
- .my_favorites_link {background: url("../images/bg_panelHeader.jpg") repeat-x scroll left top transparent; position: fixed; right: 20px; padding: 3px; text-align: center; bottom: 0px;height:25px;background-color: #fff; width: 175px;z-index: 1000}
-.my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer; font-family: "jubilat-1","jubilat-2",Georgia; font-size: 17px; color: #fff;}
+ .my_favorites_link {background: url("../images/tab_1.png") repeat-x scroll left top transparent; position: fixed; right: 20px; text-align: center; bottom: 0px;height:24px;background-color: #fff; width: 126px;z-index: 1000}
+ .my_favorites_link:hover{background: url("../images/tab_2.png") repeat-x scroll left top transparent; }
+.my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer;  font-size: 13px; color: #fff;}
   
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
