--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -598,8 +598,10 @@ top:14px;}
   
   
   /* My Favorites */
-.my_favorites_containter {display: none; position: fixed; bottom: 0px; left: 0px; height: 61px;padding-top: 10px;background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; width: 100%; z-index: 1001}
-.my_favorites_containter  .title {margin: 20px; float: left; font-size: 13px;}
+  
+.my_favorites_containter {position: fixed; bottom: 0px; left: 0px; width: 100%; z-index: 1001}
+.my_favorites_list { height: 61px;padding-top: 10px; background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; }
+
 .my_favorites {text-align: center; padding: 5px;}
 .my_favorites li.empty_thumb {width: 40px; height: 51px; background-repeat:no-repeat;background-image: url(../images/confirm-ajax-loader.gif) ;background-position:50% 50%;}
 .my_favorites li {display:inline; margin-left: 3px; }
@@ -607,7 +609,7 @@ top:14px;}
 .my_favorites_containter .close {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;position:absolute;text-indent:-9999px;top:5px;;width:25px;}
  .my_favorites_containter .close:hover {background-position: -25px -25px;} 
  
- .my_favorites_link {background: url("../images/tab_1.png") repeat-x scroll left top transparent; position: fixed; right: 20px; text-align: center; bottom: 0px;height:24px;background-color: #fff; width: 126px;z-index: 1000}
+ .my_favorites_link { background: url("../images/tab_1.png") repeat-x scroll left top transparent; margin-left: 90%;text-align: center; bottom: 58px;height:24px;background-color: #fff; width: 126px;z-index: 1000}
  .my_favorites_link:hover{background: url("../images/tab_2.png") repeat-x scroll left top transparent; }
 .my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer;  font-size: 13px; color: #fff;}
   
