--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -613,6 +613,8 @@ top:14px;}
  .my_favorites_link:hover{background: url("../images/tab_2.png") repeat-x scroll left top transparent; }
 .my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer;  font-size: 13px; color: #fff;}
  .my_favorites_link.collapsed{margin-bottom: 0px;} 
+ 
+ #zero_favorites {color: #fff; font-style:italic; text-align: center; margin-top: 20px;}
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
 #footer .container{margin-top: 10px;}
