--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -615,6 +615,7 @@ top:14px;}
  .my_favorites_link.collapsed{margin-bottom: 0px;} 
  
  #zero_favorites {color: #fff; font-style:italic; text-align: center; margin-top: 20px;}
+ #zero_favorites img{height: 22px;}
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
 #footer .container{margin-top: 10px;}
