--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -600,7 +600,7 @@ top:14px;}
   /* My Favorites */
   
 .my_favorites_containter {position: fixed; bottom: 0px; left: 0px; width: 100%; z-index: 1001}
-.my_favorites_list {  min-height: 11px; height: 61px;padding-top: 10px; background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; }
+.my_favorites_list { display: none; min-height: 11px; height: 61px;padding-top: 10px; background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; }
 
 .my_favorites {text-align: center; padding: 5px;}
 .my_favorites li.empty_thumb {display: inline-block; width: 40px; height: 51px; background-repeat:no-repeat;background-image: url(../images/black-bg-ajax-loader.gif) ;background-position:50% 50%;}
@@ -611,9 +611,12 @@ top:14px;}
  
  .my_favorites_link { margin-bottom: -12px; background: url("../images/tab_1.png") repeat-x scroll left top transparent; margin-left: 90%;text-align: center; bottom: 58px;height:24px;background-color: #fff; width: 126px;z-index: 1000}
  .my_favorites_link:hover{background: url("../images/tab_2.png") repeat-x scroll left top transparent; }
-.my_favorites_link a { padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent; cursor: pointer;  font-size: 13px; color: #fff;}
- .my_favorites_link.collapsed{margin-bottom: 0px;} 
- 
+.my_favorites_link a {cursor: pointer;  font-size: 13px; color: #fff;}
+.my_favorites_link a {padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent;}
+
+ .my_favorites_link.collapsed a{padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent;} 
+  .my_favorites_link.collapsed {margin-bottom: 0px;}
+  
  #zero_favorites {color: #fff; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic; text-align: center; font-size: 15px; margin-top: 20px;}
  #zero_favorites img{height: 22px;}
 /* Footer */
