--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -328,13 +328,15 @@ margin-bottom:8px;
 .ui-accordion .ui-accordion-content-active { display: block; }
 .ui-accordion .ui-accordion-header a span {font-family: Georgia, "Times New Roman", Times, serif;}
 
-.ui-state-active .ui-icon { background: url(../images/b_collapse.png) no-repeat scroll 0 1px transparent;}
-.ui-state-default .ui-icon { background: url(../images/b_expand.png) no-repeat scroll 0 1px transparent;}
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active,
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default  {background:url("../images/dotted_horizontal.png") repeat-x scroll left top transparent;border:0px solid #AAAAAA;color:#212121;font-weight:normal;}
-.ui-state-hover .ui-icon{background-position: left bottom}
+ Checkout ACcordian */
+.page-express-checkout .ui-state-active .ui-icon { background: url(../images/b_collapse.png) no-repeat scroll 0 1px transparent;}
+.page-express-checkout .ui-state-default .ui-icon { background: url(../images/b_expand.png) no-repeat scroll 0 1px transparent;}
+/*
+.page-express-checkout .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active,
+.page-express-checkout .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default  {background:url("../images/dotted_horizontal.png") repeat-x scroll left top transparent;border:0px solid #AAAAAA;color:#212121;font-weight:normal;}*/
+.page-express-checkout .ui-state-hover .ui-icon{background-position: left bottom}
   
-.ui-widget-content {border: 0px solid #000; }
+.page-express-checkout .ui-widget-content {border: 0px solid #000; }
 
 /********* Checkout ***********/
 
@@ -596,29 +598,49 @@ top:14px;}
 #quicktabs-store_owners_admin #orders-list table{margin: 0px;}
 .orders-filter-list {list-style-type: none; display: inline;}
   
-  
-  /* My Favorites */
-  
-.my_favorites_containter {position: fixed; bottom: 0px; left: 0px; width: 100%; z-index: 1001}
-.my_favorites_list { display: none; min-height: 11px; height: 61px;padding-top: 10px; background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; }
 
+/* Footer User Register Style*/
+
+#register_footer_promo {margin: auto; width: 753px; margin-top: 9px; }
+#register_footer_promo .text {padding-right: 20px; border-right: 1px dotted #888; float: left}
+#register_footer_promo .text h1 {font-weight: normal; color: #fff; font-size: 18px; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic;}
+#register_footer_promo .text h1 span {color: #B63030}
+#register_footer_promo .text h2{font-size: 15px; margin-top: 3px; font-weight: normal; color: #aaa; font-family: "jubilat-1","jubilat-2",Georgia}  
+#register_footer_promo .register {float: left; padding-left: 20px;}
+#register_footer_promo .register  a.button{color: #fff; float: left; margin-left: 20px; margin-top: 7px; font-size: 11px;margin: 9px 0 0 0; background: url(../images/b_small.png) top left no-repeat; width: 74px; height: 30px; text-decoration: none; text-align:center; line-height: 28px; font-size: 13px;}
+#register_footer_promo .register  a.button:hover{background-position: bottom left;}
+#register_footer_promo .login{font-size: 12px; text-align: center;float: left; margin-left: 35px; font-style: italic;font-family: "jubilat-1","jubilat-2",Georgia; color: #ddd; padding-top: 9px; }
+#register_footer_promo .login a{float: none; color: #fff; font-style: normal; text-decoration: underline;}
+
+  /* My Favorites */
 .my_favorites {text-align: center; padding: 5px;}
 .my_favorites li.empty_thumb {display: inline-block; width: 40px; height: 51px; background-repeat:no-repeat;background-image: url(../images/black-bg-ajax-loader.gif) ;background-position:50% 50%;}
 .my_favorites li {display:inline; margin-left: 3px; }
 .my_favorites  li a img {border:1px solid #777777; width: 40px; height: 51px;}
 .my_favorites_containter .close {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;position:absolute;text-indent:-9999px;top:5px;;width:25px;}
  .my_favorites_containter .close:hover {background-position: -25px -25px;} 
- 
- .my_favorites_link { margin-bottom: -12px; background: url("../images/tab_1.png") repeat-x scroll left top transparent; margin-left: 90%;text-align: center; bottom: 58px;height:24px;background-color: #fff; width: 126px;z-index: 1000}
- .my_favorites_link:hover{background: url("../images/tab_2.png") repeat-x scroll left top transparent; }
-.my_favorites_link a {cursor: pointer;  font-size: 13px; color: #fff;}
-.my_favorites_link a {padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent;}
-
- .my_favorites_link.collapsed a{padding:10px 0 10px 18px; background: url("../images/icon_star.png") no-repeat scroll left center transparent;} 
-  .my_favorites_link.collapsed {margin-bottom: 0px;}
+.my_favorites_link {padding-left:18px !important; background: url("../images/icon_star.png") no-repeat scroll left center transparent;}
   
  #zero_favorites {color: #fff; font-family: "jubilat-1","jubilat-2",Georgia; font-style:italic; text-align: center; font-size: 15px; margin-top: 20px;}
  #zero_favorites img{height: 22px;}
+ 
+ /* Floating footer tabs */
+.footer_tabs_container {position: fixed; bottom: 0px; left: 0px; width: 100%; z-index: 1001}
+.footer_tabs_content {  min-height: 13px; height: 61px;padding-top: 10px; background: url("../images/bg_favorites.png") repeat-x scroll left top transparent; }
+ 
+.footer_tabs_container.ui-tabs {  padding: 0em; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
+.footer_tabs_container.ui-tabs .ui-tabs-hide { display: none !important; }
+
+.footer_tabs_links {  position: fixed; right: 10px; bottom: 59px;z-index: 1000}
+.footer_tabs_links.collapsed{bottom: 0px !important;}
+.footer_tabs_links li {padding-top: 1px; display: inline-block; margin-right: 10px; background-color: #222;; text-align: center; height:22px;border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
+.footer_tabs_links li.ui-tabs-selected, .footer_tabs_links li:hover {background-color: #000;} 
+
+.footer_tabs_links li  a {cursor: pointer;  font-size: 13px; color: #aaa; margin:0 16px; }
+.footer_tabs_links li.ui-tabs-selected a, .footer_tabs_links li:hover a{color: #fff}
+ 
+.footer_tabs_closes {cursor: pointer; background:url("../images/controls.png") no-repeat scroll -25px 0 transparent;height:25px;right:5px;text-indent:-9999px;;width:25px;}
+ 
 /* Footer */
 #footer{ width: 1024px; clear: both;z-index: 1000; border-top: 1px solid #ddd; padding-top: 10px; }
 #footer .container{margin-top: 10px;}
